dbot:backend support set/get `is_private` interface,support set_enable infterface
