# api/gen/models/base_response.go
@@ -1,0 +1,53 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// BaseResponse base response
+//
+// swagger:model BaseResponse
+type BaseResponse struct {
+
+	// code
+	Code int32 `json:"code"`
+
+	// message
+	Message string `json:"message,omitempty"`
+}
+
+// Validate validates this base response
+func (m *BaseResponse) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this base response based on context it is used
+func (m *BaseResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *BaseResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *BaseResponse) UnmarshalBinary(b []byte) error {
+	var res BaseResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
