# api/gen/restapi/operations/admin/set_user_enable_responses.go
@@ -1,0 +1,59 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package admin
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/SpenserCai/sd-webui-discord/api/gen/models"
+)
+
+// SetUserEnableOKCode is the HTTP code returned for type SetUserEnableOK
+const SetUserEnableOKCode int = 200
+
+/*
+SetUserEnableOK Success
+
+swagger:response setUserEnableOK
+*/
+type SetUserEnableOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.BaseResponse `json:"body,omitempty"`
+}
+
+// NewSetUserEnableOK creates SetUserEnableOK with default headers values
+func NewSetUserEnableOK() *SetUserEnableOK {
+
+	return &SetUserEnableOK{}
+}
+
+// WithPayload adds the payload to the set user enable o k response
+func (o *SetUserEnableOK) WithPayload(payload *models.BaseResponse) *SetUserEnableOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the set user enable o k response
+func (o *SetUserEnableOK) SetPayload(payload *models.BaseResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *SetUserEnableOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
